    FTBFS (closes: 427506, #233141)
  * Bug in old version no longer present, do not know when it was fixed.
    (closes: #278389)
  * Add AM_MAINTAINER_MODE
  * autoreconf
  * Drop Build-Dep on autotools
  * Use dh_install instead of dh_movefiles
  * Increase debian/compat to 5 and bump versioned Build-Dependency on
    debhelper

 -- Stephen Gran <sgran@debian.org>  Mon, 10 Sep 2007 01:10:06 +0100

libnss-pgsql (1.4.0-1) experimental; urgency=low

  * New upstream version from pgfoundry

 -- Christian Bayle <bayle@debian.org>  Tue, 15 May 2007 23:00:22 +0200

libnss-pgsql (1.3.2-0.1) unstable; urgency=medium

  * Non-maintainer upload.
  * Replace build-dep on postgresql-dev by libpq-dev. Closes: #429979
  * Remove Wichert Akkerman as maintainer as wanted by him, and putting
    Christian Bayle in instead (and leave Joerg Wendland as uploader).
  * Increment upstream number to bypass +b1-packages on ftp-master.

 -- Andreas Barth <aba@not.so.argh.org>  Sat, 21 Jul 2007 21:03:48 +0000

libnss-pgsql (1.3.1) unstable; urgency=low

  * NMU
  * Apply patch to fix database query deadlock (Closes: #329467)
  * Bump standards to 3.6.2.2
  * Remove config.log on clean

 -- Julien Danjou <acid@debian.org>  Sun, 16 Apr 2006 17:01:35 +0200

libnss-pgsql (1.3-0.1) unstable; urgency=low

  * Non-maintainer upload.
  * Apply patch to fix FTBFS on amd64 (Closes: #273800).

 -- Christian Bayle <myon@debian.org>  Tue, 14 Mar 2006 15:20:16 +0100

libnss-pgsql (1.3) unstable; urgency=low

  * Applied a patch to remove SIGBUS error on sparc (Closes: Bug#285431) 

 -- Christian Bayle <bayle@debian.org>  Fri, 25 Mar 2005 22:58:54 +0100

libnss-pgsql (1.2) unstable; urgency=low

  * Drop Debian revision from version
  * Modify res2pwd and res2gerp to set errnop to ERANGE if the buffer
    we get from libc is too small. Based on a patch from Matthijs Bomhoff
    and Jorik Jonker.

 -- Wichert Akkerman <wichert@wiggy.net>  Mon, 21 Mar 2005 00:07:24 +0100
